Added Admin pages and modified common components.

--- a/src/GGL.Web.App/src/app/admin/login/login.component.html
+++ b/src/GGL.Web.App/src/app/admin/login/login.component.html
@@ -1,8 +1,6 @@
 <div>
-    <mat-label>Username or Email</mat-label>
-    <input matInput placeholder="Ex. Pizza">
-</div>
-<div>
-    <mat-label>Password</mat-label>
-    <input matInput>
+    <div>Login</div>
+    <div>
+        <img src="../../../assets/graphics/images/logo.png" />
+    </div>
 </div>
