--- a/src/GGL.Web.App/src/app/client/banner/banner.component.html
+++ b/src/GGL.Web.App/src/app/client/banner/banner.component.html
@@ -7,7 +7,7 @@
     <div class="ggl-overlay"></div>
     <div class="ggl-cover text-center" style="background-image: url(../../../assets/images/cover_bg_1.jpg);">
         <div class="center-logo">
-            <img src="../../../assets/images/svg/White-Logo-No-Bg.svg" [title]="title" />
+            <img src="../../../assets/images/svg/logo.svg" [title]="title" />
         </div>
         <div class="display-t">
             <div class="display-tc">
