--- a/src/GGL.Web.App/src/app/client/logo/logo.component.html
+++ b/src/GGL.Web.App/src/app/client/logo/logo.component.html
@@ -1,5 +1,5 @@
-<div id="ggl-logo">
+<div class="ggl-logo">
     <a href="#">
-        <img src="../../../assets/images/svg/White-Logo-No-Bg.svg" title="Green Garden Lawn" />
+        <img src="../../../assets/images/svg/{{logoSvg}}" title="Green Garden Lawn" />
     </a>
 </div>
