--- a/src/GGL.Web.App/src/assets/css/color.scss
+++ b/src/GGL.Web.App/src/assets/css/color.scss
@@ -1,4 +1,5 @@
 $color-red: #FF0000;
+$color-light-red: #b73232;
 $color-maroon-red: #C72A2A;
 $color-green: #00FF00;
 $color-dark-green: #006400;
@@ -16,3 +17,7 @@ $color-yellow: #FFFF00;
 $color-orange: #ffa500;
 $color-black: #000000;
 $color-lighter-gray: #f3ebeb;
+$color-sea-green: #2E8B57;
+$color-light-sea-green: #20B2AA;
+$color-sea-green-medium: #3CB371;
+$color-dark-olivegreen: #556B2F;
