--- a/src/GGL.Web.App/src/shared/components/footer/footer.component.html
+++ b/src/GGL.Web.App/src/shared/components/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer>
-    <div id="footer">
-        <div class="container">
+    <div class="footer">
+        <div *ngIf="!isAdminView" class="container web">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>{{appTitle}}</h2>
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <p class="ggl-social-icons">
-                        <a *ngFor = "let social of appSocialMediaLinks" [title] = "social.title" [href]="social.url">
+                        <a *ngFor="let social of appSocialMediaLinks" [title]="social.title" [href]="social.url">
                             <i [class]="social.icon?.name"></i>
                         </a>
                     </p>
@@ -20,6 +20,12 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div *ngIf="isAdminView" class="admin">
+            <p>
+                Copyright
+                <span>{{appCopyright}}</span> Green Garden Lawn. All Rights Reserved.
+            </p>
         </div>
     </div>
 </footer>
