Added new common or shared components. Update the component guid page to get more details.

--- a/src/GGL.Web.App/src/assets/css/color.scss
+++ b/src/GGL.Web.App/src/assets/css/color.scss
@@ -1,19 +1,25 @@
 $color-red: #FF0000;
+$color-tomato: #FF6347;
 $color-light-red: #b73232;
 $color-maroon-red: #C72A2A;
-$color-green: #00FF00;
+$color-green: #5cb85c;
 $color-dark-green: #006400;
 $color-blue: #0000FF;
+$color-alice-blue: #F0F8FF;
 $color-black: #000000;
 $color-skyblue: #87CEEB;
+$color-skyblue-dark:#6495ED;
 $color-menu-black: #212121;
 $color-menu-active: #81d8d0;
 $color-white: #FFFFFF;
 $color-white-smoke: #F5F5F5;
+$color-white-snow: #FFFAFA;
 $color-light-green: #4bd444;
 $color-gray: #808080;
 $color-light-gray: #d8cbcb;
+$color-lighter-gray: #e2d7d7;
 $color-yellow: #FFFF00;
+$color-yellow-dark: #f0f001;
 $color-orange: #ffa500;
 $color-black: #000000;
 $color-lighter-gray: #f3ebeb;
