--- a/src/GGL.Web.App/src/app/app.component.scss
+++ b/src/GGL.Web.App/src/app/app.component.scss
@@ -12,14 +12,15 @@
 }
 
 .admin-content {
-    padding: 1rem;
+    padding: 7rem 1rem;
 }
 
 .content {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 99vh;
+    height: 96.5vh;
+    overflow-y: auto;
 
     @media screen and (max-width: 650px) {
         .content {
