--- a/src/GGL.Web.App/src/assets/css/style.css
+++ b/src/GGL.Web.App/src/assets/css/style.css
@@ -7,11 +7,11 @@
 }
 
 .font {
-    font-family: "Montez",cursive;
+    font-family: Arial;
 }
 
 body {
-    font-family: "Open Sans",Arial,sans-serif;
+    font-family: Arial;
     line-height: 1.6;
     font-size: 16px;
     background: #fff;
@@ -33,7 +33,7 @@ p, ul, ol {
 
 h1, h2, h3, h4, h5, h6 {
     color: #5a5a5a;
-    font-family: "Montez",cursive;
+    font-family: Arial;
     font-weight: 400;
     margin: 0 0 30px 0
 }
@@ -1161,14 +1161,14 @@ ggl-cover .display-tc h6 {
     background: url(../images/hourglass.svg) center no-repeat #222
 }
 
-.color-white {
-    color: #fff;
-}
-
 .hide {
     display: none;
 }
 
 .justify {
     text-align:justify;
+}
+
+.spacer {
+    padding-left: .5rem;
 }
