--- a/src/GGL.Web.App/src/shared/components/nav-menu/nav-item/nav-item.component.scss
+++ b/src/GGL.Web.App/src/shared/components/nav-menu/nav-item/nav-item.component.scss
@@ -1,35 +1,37 @@
 @import '../nav-menu.component.scss';
 
-
-.icon {
-    width: 7rem;
+.menu {
+    min-width: 7rem;
     height: 6rem;
-    padding: 2rem;
     cursor: pointer;
-
-    a {
-        color: $color-white;
-        display: inline-flex;
-    }
-
-    span {
-        font-size: 11pt;
-        padding-left: 1.5rem;
-        font-weight: 400;
-    }
+    background-color: transparent;
+    color: $color-white;
+    border: none;
+    text-align: left;
+    padding-left: 2.5rem;
+    padding-top: 2rem;
+    display: inline-flex;
 
     &:hover {
         background-color: $color-light-sea-green;
-
-        a {
-            color: $color-black;
-        }
+        color: $color-black;
     }
 }
 
-.expand {
-    .icon {
-        width: 20rem;
+.expand-view {
+    .menu {
+        width: 17rem;
+    }
+
+    .special-menu {
+        width: 17rem;
+    }
+
+    &:hover {
+        .sub-menu {
+            margin-left: 5.5rem;
+            display: block;
+        }
     }
 }
 
@@ -46,8 +48,7 @@
 }
 
 .log-out-nav {
-    
-    bottom: 6rem;    
+    bottom: 6rem;
     background-color: $color-light-red;
 
 }
@@ -57,8 +58,7 @@
     bottom: 0;
 }
 
-::ng-deep .tooltip {
-    background-color: red;
-    color: blue;
-    font-size: 20px;
-  }
+.icon-arrow {
+    right: -5rem;
+    position: relative;
+}
